--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = include/seqan
 	url = https://github.com/eseiler/seqan.git
 	branch = SeqAn
+[submodule "include/sdsl-lite"]
+	path = include/sdsl-lite
+	url = https://github.com/xxsds/sdsl-lite.git
